# Venom

./: .gitignore  LICENSE  README.md  diffusion.py  pyproject.toml  requirements.txt  sample.py  sample_ebm.py  sample_flow.py  sample_gan.py  sample_vae.py  train.py  train_diffusion.py  train_ebm.py  train_flow.py  train_gan.py  train_vae.py
diffusion_zoo/: __init__.py  diffusion.py  edm.py  factory.py  flow_matching.py  guidance.py  ncsn.py  one_step.py  pfgm.py  sample_mnist.py  samplers.py  schedules.py  score_sde.py  train_classifier_mnist.py  train_mnist.py  train_progressive_distill_mnist.py  utils.py
diffusion_zoo/models/: __init__.py  classifier.py  dit.py
notebooks/: venom_api_kpi_tutorial.ipynb  venom_api_kpi_tutorial_en.ipynb
venom/: __init__.py  data.py  diffusion.py  edm.py  factory.py  flow_matching.py  ncsn.py  one_step.py  pfgm.py  sample_mnist.py  samplers.py  score_sde.py  train_classifier_mnist.py  train_mnist.py  train_progressive_distill_mnist.py
venom/diffusion/: __init__.py  edm.py  factory.py  flow_matching.py  gaussian.py  ncsn.py  one_step.py  pfgm.py  sample_mnist.py  samplers.py  score_sde.py  train_classifier_mnist.py  train_mnist.py  train_progressive_distill_mnist.py
venom/diffusion/models/: __init__.py  classifier.py  dit.py
venom/ebm/: __init__.py  factory.py  losses.py  models.py  sample_mnist.py  samplers.py  train_mnist.py
venom/flows/: __init__.py  dequantization.py  factory.py  models.py  sample_mnist.py  train_mnist.py  transforms.py
venom/gan/: __init__.py  factory.py  losses.py  models.py  sample_mnist.py  train_mnist.py
venom/models/: __init__.py  classifier.py  dit.py  unet.py
venom/vae/: __init__.py  factory.py  models.py  sample_mnist.py  train_mnist.py
