[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venom"
version = "0.1.0"
description = "Educational PyTorch implementations of diffusion, score SDE, flow matching, consistency, MeanFlow, PFGM++, DiT, and fast samplers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Yanliang"},
]
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
venom-train-mnist = "venom.train_mnist:main"
venom-sample = "venom.sample_mnist:main"
venom-train-classifier = "venom.train_classifier_mnist:main"
venom-distill-mnist = "venom.train_progressive_distill_mnist:main"

[tool.setuptools.packages.find]
include = ["venom*"]
